Fix google trend iframe in dark mode

--- a/cmd/webserver/assets/sass/_apps_compare.scss
+++ b/cmd/webserver/assets/sass/_apps_compare.scss
@@ -8,3 +8,11 @@
         box-shadow: none !important;
     }
 }
+
+body.dark {
+    #apps-compare-page {
+        iframe {
+            filter: invert(86%);
+        }
+    }
+}
